@@ -1,6 +1,9 @@
 ? - ?
 * New string and bigarray functions :
   * get_uint63 set_uint63 get_int63 set_int63
+* fstatat: flags parameter was omitted
+* New bindings :
+  * readlinkat
 
 0.0.5 - 16 Jun 2012
 * src/discover.ml :
